Calibration notebook, experimental data, and improved synthetic notebook

--- a/notebooks/synthetic.ipynb
+++ b/notebooks/synthetic.ipynb
@@ -75,7 +75,7 @@
     "\n",
     "# Generating the synthetic data\n",
     "## Baseline & acute simulations\n",
-    "The model is a system of ordinary differential equations (ODEs) that describes cardiac physiology, mechanics and growth. The model is described in detail in [1]. First, import the model (note that cardiogrowth needs to be added to the path of your Phython environment) and initialize it with the default parameters from an input file designed to simulate volume overload in canines: "
+    "The model is a system of ordinary differential equations (ODEs) that describes cardiac physiology, mechanics and growth. The model is described in detail in Jones and Oomen 2024. First, import the model (note that monarch and chameleon both needs to be installed and monarch should be your environment) and initialize it with the default parameters from an input file designed to simulate volume overload in canines: "
    ],
    "metadata": {
     "collapsed": false
@@ -691,7 +691,7 @@
    "source": [
     "# Fitting the baseline model\n",
     "## Setting up the Wave class\n",
-    "We will use the Wave class to fit the baseline/acute model. This class is designed to fit a model to a set of data points using Bayesian History Matching. First, we decide what parameters to fit and what their expected ranges are, and compile them in a list of dictionaries (one for each parameter). It is important that the labels match (case-insensitive) the label names in the cardiogrowth change_pars function."
+    "We will use the Wave class to fit the baseline/acute model. This class is designed to fit a model to a set of data points using Bayesian History Matching. First, we decide what parameters to fit and what their expected ranges are, and compile them in a list of dictionaries (one for each parameter). It is important that the labels match (case-insensitive) the label names in the monarch change_pars function."
    ],
    "metadata": {
     "collapsed": false
@@ -1044,7 +1044,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now start the Tide class to further analyze the results. This class is designed to analyze the progression and final results of the fitting scheme. Because the Tide class is only dependent on the exported results from the Wave class, the following cell and all others in this section can be run independently of the rest of the notebook. First, always check if the final NROY region iss within the 95% confidence interval of all data:"
+    "Now start the Tide class to further analyze the results. This class is designed to analyze the progression and final results of the fitting scheme. Because the Tide class is only dependent on the exported results from the Wave class, the following cell and all others in this section can be run independently of the rest of the notebook. First, always check if the final NROY region is within the 95% confidence interval of all data:"
    ],
    "metadata": {
     "collapsed": false
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Next, inspect the final NROY region to inspect if all parameters are uniquely fitted, and if the mean of the matched distribution is close to the true values in this synthetic case. This plot is time-consuming to generate, so we here run it with a subset of 5000 randomly chosen parameter sets."
+    "Next, inspect the final NROY region to inspect if all parameters are uniquely fitted, and if the mean of the matched distribution is close to the true values in this synthetic case. This plot is time-consuming to generate, so we here run it with a subset of 1000 randomly chosen parameter sets."
    ],
    "metadata": {
     "collapsed": false
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "We also need to specify the prior directory, which is the directory where the baseline/acute model results are stored. This is needed to initialize the growth model with the correct geometry and hemodynamics. We will use the baseline fit from the sister notebook *match_synthetic*, since only the growth simulations are different."
+    "We also need to specify the prior directory, which is the directory where the baseline/acute model results are stored. This is needed to initialize the growth model with the correct geometry and hemodynamics. We will use the previous baseline fit."
    ],
    "metadata": {
     "collapsed": false
@@ -1189,7 +1189,7 @@
     "\n",
     "    # Run simulations for all parameter sets in current wave set\n",
     "    camo.x_sim, camo.y_sim, sim_dirs = model_utils.run_forest_run(camo, input_file, sim_dirs,  constants=model_constants, \n",
-    "                                                                  log_file=camo.log_file, growth=True, run_sims=run_sims, growth_type=growth_type)\n",
+    "                                                                  log_file=camo.log_file, growth=True, run_sims=run_sims)\n",
     "\n",
     "    # Run wave: train/validate emulators, emulate, calculate implausibility, find NROY\n",
     "    camo.surf()\n",
@@ -1222,7 +1222,7 @@
    "source": [
     "# Run simulations for all parameter sets in current wave set\n",
     "x_posterior, y_posterior, _ = model_utils.run_forest_run(camo, input_file, [],  constants=model_constants, growth=True, \n",
-    "                                                         growth_type=growth_type, log_file=camo.log_file, show_fig=False, \n",
+    "                                                         log_file=camo.log_file, show_fig=False, \n",
     "                                                         posterior=True, run_sims=run_sims)"
    ],
    "metadata": {
