Validation notebook finalized

--- a/notebooks/validation.ipynb
+++ b/notebooks/validation.ipynb
@@ -387,7 +387,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "Now start the Tide class to further analyze the results. This class is designed to analyze the progression and final results of the fitting scheme. Because the Tide class is only dependent on the exported results from the Wave class, the following cell and all others in this section can be run independently of the rest of the notebook. First, always check if the final NROY region is within the 95% confidence interval of all data:"
+    "Now start the TrueColors class to further analyze the results. This class is designed to analyze the progression and final results of the fitting scheme. Because the Tide class is only dependent on the exported results from the Wave class, the following cell and all others in this section can be run independently of the rest of the notebook. First, always check if the final NROY region is within the 95% confidence interval of all data:"
    ],
    "metadata": {
     "collapsed": false
