Utilizing pars_growth twice instead of reinitializing growth constants

--- a/notebooks/synthetic.ipynb
+++ b/notebooks/synthetic.ipynb
@@ -1259,7 +1259,10 @@
     "# Save target values in csv file\n",
     "pd.DataFrame([p[\"target\"] for p in pars.values()], index=[p for p in pars], columns=[\"True\"]).to_csv(data_dir / \"x_target_growth.csv\")\n",
     "\n",
-    "model_constants.update({\"tau_f-\": 1e5, \"tau_r+\": 1e5, \"gamma\": 2.0, \"t_mem\": 1e5, \"theta_f_max\": 1.5**2, \"theta_f_min\": 0.75, \"theta_r_max\": 1.5, \"theta_r_min\": 0.75})"
+    "del pars_growth[\"tau_f+\"]\n",
+    "del pars_growth[\"tau_r-\"]\n",
+    "\n",
+    "model_constants.update(pars_growth)"
    ],
    "metadata": {
     "collapsed": false,
